# AICoverLetterGenerator

./: .gitignore  .replit  README.md  download_db_to_csv_from_replit.py  main.py  pasted_text_1725936224349.txt  pasted_text_1725936269615.txt  pyproject.toml  requirements.txt  resume.csv  submission.csv  upload_csv_database_files_to_supabase.py  user.csv  vercel.json
static/js/: script.js
templates/: cover_letter_format.py  dashboard.html  forgot_password.html  index.html  login.html  register.html  reset_password.html  result.html  settings.html  submit.html  view_submissions.html
utils/: pdf_processor.py
